# ComputerVision

./: README.md
cl_svm/: CMakeLists.txt
cl_svm/code/include/: gpu_cache.hpp  profiling.h  svm.h
cl_svm/code/matlab/: GetHistogram.m  HogDes.m  libsvmread.mexw64  libsvmwrite.mexw64  make.m  mex_make.bat  svm_model_matlab.cpp  svmpredict.cpp  svmpredict.mexw64  svmtrain.c  svmtrain.cpp  svmtrain.mexw64  testTraining.m
cl_svm/code/src/opencl_kernels/: customDaxpyKernelSource.c  customDaxpyKernelSource.cl  customMatrixVectorKernelSource.c  customMatrixVectorKernelSource.cl  customMatrixVectorPolynomialKernelSource.c  customMatrixVectorPolynomialKernelSource.cl  customMatrixVectorRBFKernelSource.c  customMatrixVectorRBFKernelSource.cl  customMatrixVectorSigmoidKernelSource.c  customMatrixVectorSigmoidKernelSource.cl  dualDaxpyKernelSource.c  dualDaxpyKernelSource.cl  findCandidateIValuesKernelSource.c  findCandidateIValuesKernelSource.cl  findCandidateJValuesKernelSource.c  findCandidateJValuesKernelSource.cl  linearKernelKernelSource.c  linearKernelKernelSource.cl  predictionReductionKernel.c  predictionReductionKernelSource.c  predictionReductionKernelSource.cl  reductionKernelSource.c  reductionKernelSource.cl  swapObjectiveFunctionKernelSource.c  swapObjectiveFunctionKernelSource.cl  swapVectorBlockKernelSource.c  swapVectorBlockKernelSource.cl
cl_svm/code/src/svm/: svm.cpp
cl_svm/code/src/svm-predict/: svm-predict.c
cl_svm/code/src/svm-train/: cross_validation_with_matrix_precomputation.c  kernel_matrix_calculation.c  svm-train.c
gpu_kmeans_v1.0/: Makefile  cudaKmeans.cu  cudaKmeans.mexw64  install.m  kmeans_gpu.m  kmeans_serial.c  make.m  nvccbat.bat  uninstall.m
images/background/: README
images/leaves/: README
lib/: cudaKmeans.mexw64  libsvmread.mexw64  libsvmwrite.mexw64  svmpredict.mexw64  svmtrain.mexw64
scripts/: BuildClusters.m  BuildHistograms.m  ClassifyImage.m  GetFeatures.asv  GetFeatures.m  TrainSVM.m  getHist.m  test.m
